reset body margin

--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ body{
     font-size: 14px;
     font-family: var(--primary-font);
     background-color: var(--cream);
+    margin:0px;
 }
 main{
     display:flex;
